--- a/style.css
+++ b/style.css
@@ -77,6 +77,8 @@ position: static;
     top: 50%;
     animation: Slideup 0,5s ease;
     min-width: 200PX;
+    width: 500px;
+    min-width: 50px;
 }
 .hero-btn{
     font-family: 'Inter', sans-serif;
